crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@408.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr -|- int4multirange(int4range(100,200), int4range(400,500));"
---
SelectStmt@0..110
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..107
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..54 "-|-"
    Whitespace@54..55 " "
    FuncCall@55..107
      Ident@55..69 "int4multirange"
      Ascii40@69..70 "("
      FuncCall@70..87
        Ident@70..79 "int4range"
        Ascii40@79..80 "("
        AConst@80..83
          Iconst@80..83 "100"
        Ascii44@83..84 ","
        AConst@84..87
          Iconst@84..87 "200"
      Ascii41@87..88 ")"
      Ascii44@88..89 ","
      Whitespace@89..90 " "
      FuncCall@90..107
        Ident@90..99 "int4range"
        Ascii40@99..100 "("
        AConst@100..103
          Iconst@100..103 "400"
        Ascii44@103..104 ","
        AConst@104..107
          Iconst@104..107 "500"
  Ascii41@107..108 ")"
  Ascii41@108..109 ")"
  Ascii59@109..110 ";"

