crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@416.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr << 'empty'::int4range;"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..72
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..53 "<<"
    Whitespace@53..54 " "
    TypeCast@54..72
      AConst@54..61
        Sconst@54..61 "'empty'"
      Typecast@61..63 "::"
      TypeName@63..72
        Ident@63..72 "int4range"
  Ascii59@72..73 ";"

