crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[a,a], [b,b], [c,c]}'::textmultirange;"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    TypeCast@7..46
      AConst@7..30
        Sconst@7..30 "'{[a,a], [b,b], [c,c]}'"
      Typecast@30..32 "::"
      TypeName@32..46
        Ident@32..46 "textmultirange"
  Ascii59@46..47 ";"

